# xeus-sql

./: .appveyor.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  Untitled.ipynb  environment-dev.yml  environment.yml  xeus-sociConfig.cmake.in  xeus-sqlConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
.github/workflows/: main.yml
binder/: environment.yml
cmake/: FindSoci.cmake
docs/: Doxyfile  SQLite3.rst  connecting_dbs.rst  environment.yml  index.rst  installation.rst  sql_magic.rst
docs/source/: DB2.rst  Firebird.rst  MySQL.rst  ODBC.rst  Oracle.rst  PostgreSQL.rst  SQLite3.rst  api.rst  conf.py  index.rst  installation.rst
examples/: Firebird.ipynb  MySQL.ipynb  PostgreSQL.ipynb  SQLite.ipynb  XVega operations.ipynb  firebird.fdb  rect_category_heatmap.vl.json
examples/dbname/: example.ibd
include/xeus-soci/: soci_handler.hpp  xeus_soci_config.hpp  xeus_soci_interpreter.hpp
include/xeus-sql/: soci_handler.hpp  xeus_sql_config.hpp  xeus_sql_interpreter.hpp
share/jupyter/kernels/xsoci/: kernel.json  kernel.json.in
share/jupyter/kernels/xsql/: kernel.json  kernel.json.in
src/: main.cpp  xeus_soci_interpreter.cpp  xeus_sql_interpreter.cpp
test/: CMakeLists.txt  main.cpp  test_db.cpp
